packages/isar_generator/test/errors/index/non_string_list_hashed_elements.dart
// only string lists may have hashed elements

import 'package:isar/isar.dart';

@Collection()
class Model {
  Id? id;

  @Index(type: IndexType.hashElements)
  List<int>? list;
}
